tests/e2e/corpus/err_property_on_number.err
[line 2] runtime error: only instances have properties
