tests/e2e/corpus/err_property_on_number.lum
var n = 42;
print n.field;
